Aligned the search button height with the zipcode input field - fixed #54

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -29,6 +29,10 @@
   padding-bottom: 5px;
 }
 
+#search-btn {
+  height: 34px;
+}
+
 #header_logo {
 	height: 46px;
 	width: 140px;
